add png link. use cid rather than cas for import. cas should be searched as name. add swagger